--- a/versao_pdo/3-login_system/css/styles.css
+++ b/versao_pdo/3-login_system/css/styles.css
@@ -56,6 +56,8 @@ body {
     color: #072c61;
 }
 
-.alert-danger{color: red; border: 1px solid red;}
+.alert-danger{color: red;}
 
 .my-2{margin-top: 15px; margin-bottom: 15px;}
+
+.error{color: red; font-size: 0.8em;}
